--- a/mpu/CMakeLists.txt
+++ b/mpu/CMakeLists.txt
@@ -1,3 +1,20 @@
+make_minimum_required(VERSION 3.13)
+
+# initialize the SDK based on PICO_SDK_PATH
+# note: this must happen before project()
+include(pico_sdk_import.cmake)
+
+project(hello_world)
+
+# not quite sure what this is doing tbh
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
+# initialize the Raspberry Pi Pico SDK
+pico_sdk_init()
+
+
+
 add_executable(eulerAngleExample eulerAngleExample.c)
 
 # Pull in our pico_stdlib which pulls in commonly used features
