--- a/mpu/CMakeLists.txt
+++ b/mpu/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.13)
 # initialize the SDK based on PICO_SDK_PATH
 # note: this must happen before project()
 include(pico_sdk_import.cmake)
+#includes the necesserey directories withinn the sdk such as spi.h
+include_directories(${PICO_SDK_INCLUDE_DIRS})
 
 project(eulerAngleExample)
 
